committing changes related to multi-person traits
